--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="4dp"/>
 
     <TextView
-        android:id="@+id/tvDescription"
+        android:id="@+id/tvmemo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"/>
